--- a/locale/en.txt
+++ b/locale/en.txt
@@ -26,5 +26,7 @@ panorama_94B9659D_8697_9530_41DF_84307B4CE9AE.label = R0010747
 ## Action
 
 ### URL
+PopupWebFrameBehaviour_81FED44F_99AD_0626_41D3_B7E57BE7E2DB.url = https://perguruandiponegoro.sch.id/
+PopupWebFrameBehaviour_81FEE450_99AD_063A_41E0_7EBB0825D9C9.url = https://www.google.com/maps/embed?pb=!4v1621783744934!6m8!1m7!1s7kmSKF4jXWr8C3C6os0Lxw!2m2!1d-6.195586656495621!2d106.8833749973995!3f288.49667939016433!4f2.3687953172930634!5f0.4000000000000002
 PopupWebFrameBehaviour_8C0D38F9_99E3_0FEB_41D0_3EB84C59368D.url = https://perguruandiponegoro.sch.id/
 PopupWebFrameBehaviour_8EFD1BEC_99E5_01EA_41E2_42131ECF31D4.url = https://www.google.com/maps/embed?pb=!4v1621783744934!6m8!1m7!1s7kmSKF4jXWr8C3C6os0Lxw!2m2!1d-6.195586656495621!2d106.8833749973995!3f288.49667939016433!4f2.3687953172930634!5f0.4000000000000002
